fix: Edit navigation style to fix z-index

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -6,6 +6,8 @@
     width: 80px;
     border-radius: 10px;
     margin: 10px 0px 10px 10px;
+    background: #ffffff;
+    z-index: 2;
 }
 
 @media only screen and (max-width: 1024px) {
